tests/script_errors/invalid_const_binary/error.txt
Error: 
    1 | [1] / [2]
      | ^^^^^^^^^ The binary operation `/` is not defined for the type `array` and `array`